pre-travis setup

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Integration Tests</title>
-  <script src="https://gstatic.com/firebasejs/staging/7.2.1/firebase-app.js"></script>
-  <script src="https://gstatic.com/firebasejs/staging/7.2.1/firebase-remote-config.js"></script>
+  <script src="/js/firebase-app.js"></script>
+  <script src="/js/firebase-remote-config.js"></script>
   <script src="/js/remote-styles.js"></script>
   <script>
     (async function () {
