--- a/src/site/index.html
+++ b/src/site/index.html
@@ -22,6 +22,7 @@ limitations under the License.
   <script src="/js/firebase-app.js"></script>
   <script src="/js/firebase-remote-config.js"></script>
   <script src="/js/remote-styles.js"></script>
+  <script src="/js/webpack.bundle.js"></script>
   <script>
     (async function () {
       const firebaseApp = window.firebase.initializeApp({
