--- a/src/site/webpack.html
+++ b/src/site/webpack.html
@@ -19,9 +19,7 @@ limitations under the License.
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Integration Tests</title>
-  <script src="/js/firebase-app.js"></script>
-  <script src="/js/firebase-remote-config.js"></script>
-  <script src="/js/remote-styles.js"></script>
+  <script src="/js/webpack.bundle.js"></script>
   <script>
     (async function () {
       const firebaseApp = window.firebase.initializeApp({
